# mesagisto-diagnose

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pre-release.yml  release.yml
src/: main.rs
